--- a/env.example
+++ b/env.example
@@ -11,7 +11,9 @@ LLM_API_KEY=your_openai_api_key_here
 # DEEPSEEK_API_KEY=your_deepseek_api_key_here
 
 # 记忆配置
+# 短期记忆最大轮数（达到此轮数后会清理旧记忆）
 SHORT_TERM_MAX_ROUNDS=10
+# 记忆更新间隔（每N轮对话触发一次长期记忆更新）
 MEMORY_UPDATE_INTERVAL=10
 
 # 系统配置
